argo/hello-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # 3가지 필수 구성요소중 하나
  name: hello-deploy # 해당 이름으로 디플로이 먼트가 생성됨.
  labels:
    app: hello
spec: # 3가지 필수 구성요서중 하나 specification, 나머지 하나는 status
  replicas: 2 # 3개의 리플리카 pod를 생성한다.
  selector: # 디플로이먼트가 관리할 파드를 찾는 방법을 정의, matchLabels이 nginx인 파드를 디플로이먼트가 관리한다.
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello # 파드는 .metadata.labels 필드를 사용 app: nginx 라는 레이블을 붙인다.
    spec:
      containers:
        - name: hello # 컨테이너 1개를 생성, .spec.template.spec.containers[0].name 필드를 사용해서 nginx 라는 이름을 붙인다.
          image: 884868906286.dkr.ecr.ap-northeast-2.amazonaws.com/test:latest # 파드가 도커 허브의 nginx 1.14.2 버전 이미지를 실행하는 nginx 컨테이너 1개를 실행하는 것을 나타낸다.
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
