argo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: hello
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: hello
